# toca

./: .appveyor.yml  .cirrus.yml  .codecov.yml  .gitignore  LICENSE  README.md  meson.build  meson_options.txt  toca.sln
.ci/: ci.run  coverity.run  docker-prelude.sh  docker.env  docker.run
.github/workflows/: main.yml
tlib/: .tobject.h.swp  meson.build  native-type.h  tlib.h  tlib.vcxproj  tlib.vcxproj.filters  tlibconfig.h.in  tmacros.h  tobject-p.h  tobject.c  tobject.h  tstring.c  tstring.h  ttypes.h  tversion.h  tversionmacros.h
tlib/linux/string_s/: strcpy_s.c  string_s.h
tlib/tests/: meson.build
tlib/tests/tstring/: meson.build  tstring-at.c  tstring_at.c  tstring_clone.c  tstring_compare.c  tstring_compare_ignorecase.c  tstring_compare_ignorecase_v2.c  tstring_compare_v2.c  tstring_concat.c  tstring_concat_v2.c  tstring_contains.c  tstring_count_ocurrences_of.c  tstring_empty.c  tstring_endswith.c  tstring_endswith_v2.c  tstring_equals.c  tstring_equals_ignorecase.c  tstring_free.c  tstring_getchars.c  tstring_hashcode.c  tstring_indexof.c  tstring_indexof_v2.c  tstring_indexof_v3.c  tstring_indexof_v4.c  tstring_indexof_v5.c  tstring_indexof_v6.c  tstring_istypeof_string.c  tstring_last_indexof.c  tstring_last_indexof_v2.c  tstring_last_indexof_v3.c  tstring_last_indexof_v4.c  tstring_last_indexof_v5.c  tstring_last_indexof_v6.c  tstring_length.c  tstring_new.c  tstring_new_v2.c  tstring_new_v3.c  tstring_new_v4.c  tstring_replace.c  tstring_startswith.c  (+5 more)
