option('iconv',
       type : 'combo',
       choices : ['auto', 'libc', 'external'],
       value : 'auto',
       description : 'iconv implementation to use (\'libc\' = \'Part of the C library\'; \'external\' = \'External libiconv\'; \'auto\' = \'Auto-detect which iconv is available\')')

option('tio_module_dir',
       type : 'string',
       value : '',
       description : 'load gio modules from this directory (default to \'libdir/gio/modules\' if unset)')

option('man',
       type : 'boolean',
       value : false,
       description : 'generate man pages (requires xsltproc)')

option('doc',
       type : 'boolean',
       value : false,
       description : 'use doxygen to build documentation')

option('build_tests',
       type : 'boolean',
       value : false,
       description : 'build tests')

option('install_tests',
       type : 'boolean',
       value : false,
       description : 'enable installed tests')

option('oss_fuzz',
       type : 'feature',
       value : 'disabled',
       description : 'Indicate oss-fuzz build environment')

option('tlib_debug',
       type : 'feature',
       value : 'auto',
       yield : true,
       description : 'Enable debug infrastructure (see docs/macros.txt)')

option('asserts',
       type : 'boolean',
       value : true,
       yield : true,
       description : 'Enable assertion (see docs/macros.txt)')

option('tlib_checks',
       type : 'boolean',
       value : true,
       yield : true,
       description : 'Enable checks such as API guards (see docs/macros.txt)')

